Refactoring done with respect to responses.