@@ -1,8 +1,9 @@
 package com.satyam.serviceImpl;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
+import com.satyam.utils.ApiResponse;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -16,7 +17,6 @@ import com.satyam.exceptions.CustomException;
 import com.satyam.model.User;
 import com.satyam.repository.IUserRepository;
 import com.satyam.service.IUserService;
-import com.satyam.utils.UserResponse;
 
 @Service
 public class UserServiceImpl implements IUserService {
@@ -28,45 +28,48 @@ public class UserServiceImpl implements IUserService {
     private ModelMapper modelMapper;
 
     @Override
-    public UserResponse getUserById(Integer id) {
+    public ApiResponse getUserById(Integer id) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new CustomException("User not found with Id " + id, HttpStatus.NOT_FOUND, false));
-        return modelMapper.map(user, UserResponse.class);
+        return new ApiResponse("success", 200, true, modelMapper.map(user, UserDto.class));
     }
 
     @Override
-    public List<UserResponse> getAllUsers(Integer pageNo, Integer pageSize) {
+    public ApiResponse getAllUsers(Integer pageNo, Integer pageSize) {
         Pageable pageable = PageRequest.of(pageNo, pageSize);
         Page<User> page = userRepository.findAll(pageable);
-        List<User> allUsers = page.getContent();
-        return allUsers
+        List<UserDto> allUsers = page.getContent()
                 .stream()
-                .map(user -> modelMapper.map(user, UserResponse.class))
-                .collect(Collectors.toList());
+                .map(user -> modelMapper.map(user, UserDto.class))
+                .toList();
+        return new ApiResponse("success", 200, true, allUsers);
     }
 
     @Override
-    public UserResponse deleteUserById(Integer id) {
+    public ApiResponse deleteUserById(Integer id) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new CustomException("User not found with Id " + id, HttpStatus.NOT_FOUND, false));
         userRepository.delete(user);
-        return modelMapper.map(user, UserResponse.class);
+        return new ApiResponse("success", 200, true, modelMapper.map(user, UserDto.class));
     }
 
     @Override
-    public UserResponse updateUser(UserDto userDto) {
+    public ApiResponse updateUser(UserDto userDto) {
         userRepository
                 .findById(userDto.getId())
                 .orElseThrow(
                         () -> new CustomException("User not found with Id " + userDto.getId(), HttpStatus.NOT_FOUND,
                                 false));
         User user = userRepository.save(modelMapper.map(userDto, User.class));
-        return modelMapper.map(user, UserResponse.class);
+        return new ApiResponse("success", 200, true, modelMapper.map(user, UserDto.class));
     }
 
     @Override
-    public UserResponse createUser(UserDto userDto) {
+    public ApiResponse createUser(UserDto userDto) {
+        Optional<User> optionalUser = userRepository.findByEmail(userDto.getEmail());
+        if(optionalUser.isPresent())
+            throw new CustomException("User already exists", HttpStatus.CONFLICT, false);
         User user = userRepository.save(modelMapper.map(userDto, User.class));
-        return modelMapper.map(user, UserResponse.class);
+        return new ApiResponse("success", 201, true, modelMapper.map(user, UserDto.class));
     }
 }
